--- a/app/src/main/res/layout/sight_list.xml
+++ b/app/src/main/res/layout/sight_list.xml
@@ -13,23 +13,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color"
-    android:orientation="vertical"
-    tools:context="com.example.vga.tour_guide.MainActivity">
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        style="@style/CategoryTab"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</LinearLayout>
+    android:drawSelectorOnTop="true"/>
